# buckdb

./: .gitignore  DuckdbTypes.ts  PROJECT_SUMMARY.md  README.md  api-tutorial.ts  autogen.ts  buckdb.core.ts  buckdb.remote.ts  buckdb.ts  buckdb.wasm.ts  builder.test.ts  builder.ts  bun.lockb  bunfig.toml  cli.ts  core.ts  demo.ts  demo.txt  demo_showcase.ts  dprint.json  draft.ts  fn.ts  generate-types.ts  generated-typed.ts  generated.ts  gentypes.ts  index.ts  io.ts  jsr.json  node.ts  package.json  remote.ts  showcase.md  tf.ts  todo.txt  tsconfig.json  tsconfig.typecheck.json  utils.ts  uu.ts  wasm.ts
.buck/: models.json  models.ts  types.ts
adapters/: DuckDBNodeAdapter.ts  DuckDBWasmAdapter.ts
codegen/: run-compile.ts  template.ts
coverage/: lcov.info
demo/: .gitignore  PROJECT_SUMMARY.md  bun.lockb  duckdb-server.sh  highlighter.ts  index.html  netlify.toml  package-lock.json  package.json  serve-static.ts  tsconfig.json  update-local-dependencies.ts  vite.config.ts  vite.dbserver.ts  vite.netlify.config.ts  vite.prod.config.ts  wrangler.toml
docs/: index.html
examples/: 01-getting-started.ts  02-advanced-arrays-and-transformations.ts  02-javascript-superpowers.ts  03-joins-and-relationships.ts  04-aggregations-and-analytics.ts  api-tutorial.ts  atuin.ts  d.ts  demo-tutorial.ts  demo.ts  demo_showcase.ts  draft.ts  fsimrep.ts  reindexer.ts  soccer.ts  spatial.ts  swiss-chocolate-stores.ts  (+3 more)
executor/: Cargo.toml  test_cookies.py
executor/src/: error_utils.rs  lib.rs  main.rs  result_serializer.rs  settings.rs
executor/tests/: integration_tests.rs
(+217 files in other folders)
