[package]
name = "buckdb-executor"
version = "0.1.0"
edition = "2021"

[lib]
name = "buckdb_executor"
path = "src/lib.rs"

[[bin]]
name = "buckdb-executor"
path = "src/main.rs"

[dependencies]
duckdb = { version = "1.3.1", features = ["column_decltype", "extensions-full", "json", "modern-full"] }
regex = "1.11.1"
uuid = { version = "1.0", features = ["v4"] }
arrow = { version = "55.2", default-features = true, features = ["chrono-tz"] }
serde_json = "1.0.140"
tiny_http = "0.12"
chrono = "0.4.41"
anyhow = "1.0.98"
base64 = "0.21"
